# beryllium

./: Cargo.toml  Dockerfile  README.md  build.rs  messages.proto
examples/echo-bot/: Cargo.toml
examples/echo-bot/src/: main.rs
src/: client.rs  errors.rs  file_store.rs  handlers.rs  lib.rs  otr_manager.rs  service.rs  storage.rs  types.rs  utils.rs
