[package]
name = "beryllium"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
build = "build.rs"

[dependencies]
base64 = "0.7"
cryptobox = { git = "https://github.com/wireapp/cryptobox", branch = "develop" }
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.11"
hyper-rustls = "0.12"
image = "0.17"
lazy_static = "1.0"
log = "0.3"
md-5 = "0.5"
mime = "0.3"
openssl = "0.10"
parking_lot = "0.5"
proteus = { git = "https://github.com/wireapp/proteus", branch = "develop" }
protobuf = "1.4"
rustls = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.6"
tokio-core = "0.1"
tokio-rustls = { version = "0.5", features = ["tokio-proto"] }
tokio-proto = "0.1"
uuid = { version = "0.5", features = ["serde"] }
# uuid_v1 = "0.1"

# For musl support, interfaces-rs should be bumped, followed by uuid_v1
# Until then, we gotta work around.
[dependencies.uuid_v1]
git = "https://github.com/wafflespeanut/uuid_v1_rs"

[build-dependencies]
protoc-rust = "1.4"
